Implement basic check of state

--- a/Sheet-To-Do/Sheet-To-Do/Views/Home/Index.cshtml
+++ b/Sheet-To-Do/Sheet-To-Do/Views/Home/Index.cshtml
@@ -32,7 +32,9 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Done)
+            @if(item.Done) {@Html.ActionLink("Done", "ChangeState", new { id = item.Id })}
+            @if (!item.Done){@Html.ActionLink("Not Done", "ChangeState", new { id = item.Id })}
+
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
