--- a/Sheet-To-Do/Sheet-To-Do/Views/Home/Index.cshtml
+++ b/Sheet-To-Do/Sheet-To-Do/Views/Home/Index.cshtml
@@ -7,8 +7,15 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @using (Html.BeginForm("Create", "Home", FormMethod.Post))
+    {
+    <p>
+        @Html.TextBox("NewTaskText")
+        <input class="btn btn-default" type="submit" value="Add" />
+    </p>
+    }
 </p>
+
 <table class="table">
     <tr>
         <th>
